# cornpiler

./: .gitignore  CMakeLists.txt  README.md  TODO  ast.cpp  ast.hpp  ast_front.cpp  ast_front.hpp  compile.cpp  compile.hpp  compiler_frontend.cpp  compiler_frontend.hpp  get_total_lines_of_code.sh  logger.cpp  logger.hpp  main.cpp  main.hpp  parse_cli.cpp  parse_cli.hpp  translate.cpp
ast/: CMakeLists.txt  arrdef.cpp  arrget.cpp  arrgetptr.cpp  arrset.cpp  bitcast.cpp  body.cpp  call.cpp  deref.cpp  expr.cpp  general.cpp  getvar.cpp  getvarptr.cpp  if.cpp  inlineasm.cpp  operand.cpp  returnnull.cpp  returnval.cpp  unaryop.cpp  vardef.cpp  varset.cpp  while.cpp
ast/const/: array.cpp  bitcast.cpp  float.cpp  int.cpp  operand.cpp  string.cpp  unaryop.cpp
ast/debug/: CMakeLists.txt  arrdef.cpp  arrget.cpp  arrgetptr.cpp  arrset.cpp  bitcast.cpp  body.cpp  call.cpp  deref.cpp  expr.cpp  general.cpp  getvar.cpp  getvarptr.cpp  if.cpp  inlineasm.cpp  operand.cpp  returnnull.cpp  returnval.cpp  unaryop.cpp  vardef.cpp  varset.cpp  while.cpp
ast/debug/const/: array.cpp  bitcast.cpp  float.cpp  int.cpp  operand.cpp  string.cpp  unaryop.cpp
ast/debug/global/: function.cpp  prototype.cpp  variable.cpp
ast/debug/types/: array.cpp  float.cpp  function.cpp  int.cpp  pointer.cpp  string.cpp  void.cpp
ast/global/: function.cpp  prototype.cpp  variable.cpp
ast/types/: array.cpp  float.cpp  function.cpp  int.cpp  pointer.cpp  string.cpp  void.cpp
pre_ast/: CMakeLists.txt  ast.cpp  ast.hpp  filereader.cpp  filereader.hpp  scopes.cpp  scopes.hpp
pre_ast/nodes/: CMakeLists.txt  arrget.cpp  arrget.hpp  arrset.cpp  arrset.hpp  call.cpp  call.hpp  callptr.cpp  callptr.hpp  class.cpp  class.hpp  classget.cpp  classget.hpp  const_decimal.cpp  const_decimal.hpp  const_int.cpp  const_int.hpp  const_str.cpp  const_str.hpp  expr.cpp  expr.hpp  extdef.cpp  extdef.hpp  fun_type.cpp  fun_type.hpp  fundef.cpp  fundef.hpp  getvar.cpp  getvar.hpp  glbdef.cpp  glbdef.hpp  global.cpp  global.hpp  in_type.cpp  in_type.hpp  oper.cpp  oper.hpp  out_type.cpp  out_type.hpp  ptrset.cpp  (+17 more)
pre_ast/types/: arg_with_type_t.cpp  arg_with_type_t.hpp  char_t.cpp  char_t.hpp  decimal_t.cpp  decimal_t.hpp  number_t.cpp  number_t.hpp  string_t.cpp  string_t.hpp
pre_ast/with/: args.hpp  args_with_type.hpp  body.hpp  return_type.hpp  second_args.hpp  second_body.hpp  type.hpp  values.hpp
tests/: CMakeLists.txt  class_test.crn  guessing_game.crn  helloworld.crn  primes.crn  return_test.crn  stuff.crn  vartest.crn
